objects/Organizational_Group_User__c.object
<CustomObject>
    <fields>
        <fullName>Access_Level__c</fullName>
        <label>Access Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Read</fullName>
                </value>
                <value>
                    <fullName>Read-Write</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business__c</fullName>
        <formula>Organizational_Group_Item__r.Business__r.Business__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Pricing_Util_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent-child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy Pricing Util SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Novus_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Stores Legacy Id</description>
        <externalId>true</externalId>
        <label>Novus External Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OrgGroup__c</fullName>
        <label>Organizational Group</label>
        <referenceTo>OrgGroup__c</referenceTo>
        <relationshipLabel>Organizational Group Users</relationshipLabel>
        <relationshipName>Organizational_Group_Users</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Organizational_Group_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organizational Group Item</label>
        <referenceTo>Organizational_Group_Item__c</referenceTo>
        <relationshipLabel>Organizational Group Users</relationshipLabel>
        <relationshipName>Organizational_Group_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PA_Notify_opt_in__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PA Notify opt-in</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Public_Group_Id__c</fullName>
        <label>Related Public Group Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Organizational_Group_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Org_Code__c</fullName>
        <formula>OrgGroup__r.ERP_Sales_Org_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Org Code</label>
        <type>Text</type>
    </fields>
    <label>Organizational Group Users</label>
    <nameField>
        <displayFormat>OGU-{00000}</displayFormat>
        <label>Organizational Group User Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Organizational Group Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>